# unified-lakehouse-engine

./: .gitignore  README.md  pyproject.toml
config/: platform.example.yaml
docs/: README.md  data-flow.md  data-models.md  sequence-diagrams.md
examples/: sample_events.json
sql/schemas/: init.sql
sql/seeds/: README.md  redshift.sql  starrocks.sql  tidb.sql  vitess.sql
sql/trino/: catalogs.properties
src/lakehouse/: __init__.py  cli.py  config.py  engine.py
src/lakehouse/connectors/: __init__.py  base.py  iceberg.py  kafka.py  redshift.py  starrocks.py  tidb.py  trino.py  vitess.py
src/lakehouse/pipelines/: __init__.py  lakehouse_sync.py  streaming.py
src/lakehouse/query/: __init__.py  federation.py
tests/: test_engine.py  test_federation.py
