[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unified-lakehouse-engine"
version = "0.1.0"
description = "Cloud-native distributed analytics platform integrating Kafka, TiDB, Vitess, Iceberg, Trino, Redshift, and StarRocks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.3.0",
    "pyarrow>=14.0.0",
    "pyiceberg[pyarrow]>=0.6.0",
    "trino>=0.328.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pymysql>=1.1.0",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
lakehouse = "lakehouse.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lakehouse"]

[tool.hatch.build.targets.wheel.force-include]
"src/lakehouse" = "lakehouse"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
